chore(audit-v11): checkpoint streak refactor + audit v9/v10 fixes before v11 re-audit
Working tree carried 337 uncommitted files (65 modified, 96 untracked paths)
from the streak/study-day refactor and audits v9/v10 — with no git rollback
point. This commit creates one, so the v11 audit starts from a known state.

Contents:
- Streak/study-day refactor: StudyDay/StudyPolicy entities, StudyActivityService,
  repositories, StudySnapshot DTO + projection, deploy.sql, verify-sql.ps1.
- audit-v10 fixes: F115/F126 draft-lesson guards, F116 retry budget, F117
  fail-closed reminder job, F118 decor props, F121 container, F122 pre-cutover,
  F125 font weight 800, F127 MATCHING grading, F128 listening relabel.
- Regression tests from v8/v9/v10 (matching grading, study activity, SRS caps,
  draft guards, html parser downgrade, leaderboard streak batch).
- Audit artifacts: .specify/specs/audit-v9-full, audit-v10-full, sweep/v8, sweep/v10.

No .env, credentials, or fixture media are included (.gitignore verified).

Co-Authored-By: Claude Code <noreply@anthropic.com>